Added intro block

--- a/index.html
+++ b/index.html
@@ -47,6 +47,24 @@
               </div>
             </div>
           </div>
+          <div class="container">
+            <div class="resume__block">
+              <div class="intro">
+                <div class="intro__icon-wrapper">
+                  <svg class="intro__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                    <path
+                      d="M464 256h-80v-64c0-35.3 28.7-64 64-64h8c13.3 0 24-10.7 24-24V56c0-13.3-10.7-24-24-24h-8c-88.4 0-160 71.6-160 160v240c0 26.5 21.5 48 48 48h128c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48zm-288 0H96v-64c0-35.3 28.7-64 64-64h8c13.3 0 24-10.7 24-24V56c0-13.3-10.7-24-24-24h-8C71.6 32 0 103.6 0 192v240c0 26.5 21.5 48 48 48h128c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48z">
+                    </path>
+                  </svg>
+                </div>
+                <p class="intro_text">Hello.
+                    My objective is to get a job of junior or trainee QA Engineer in a company where I can grow in terms of personal and professional development,  and give a visible benefit to it. Most of my work in my life were in The State register of voters through a database informational system.  At my job everything, what is possible, has already been studied, there is nowhere to grow further, so I choose IT, where there is always things to strive for. 
+                    I would like to change my life to better and i have choosed QA direction because for me it`s very interesting and exciting work to explore software product like detective and to be responsible for quality.
+                    In free time i like sport, especially stretcning, which taught me not to give up on the way to achieving goals, reading and go somewhere for a walk. Also sometimes i like embroidering which helps to concentrate and distract from problems. 
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
       </main>
   </body>
