Added skills block

--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@
               </div>
             </div>
           </div>
+          <div class="container">
+            <div class="resume__block">
+              <div class="skills">
+                <h3 class="skills__header">Skills</h3>
+                <p class="skills__text">Work with git; in Trello; entering bugs in Jira; sql; basic of html, css, javascript; making checklists, test cases in excel and in testrail; creating simple test collection in Postman; work with Chrome Devtools; work with Oracle VM Virtual Box. </p>
+              </div>
+            </div>
+          </div>
         </div>
       </main>
   </body>
