--- a/index.html
+++ b/index.html
@@ -77,7 +77,42 @@
             <div class="resume__block">
               <div class="main-info fh">
           
-                <div class="experiences"></div>
+                <div class="experiences">
+                    <h3 class="experiences__header">Experience№1</h3>
+                    <div class="experiences__company">
+                        <div class="experiences__company-header">
+                            <span class="experiences__company-header-durability">march 2010 - october 2022</span>
+                            <h3 class="experiences__company-header-name">State register of voters</h3>
+                        </div>
+
+                        <div class="experiences__company-project">
+                            <span class="experiences__company-project-role">Main specialist</span>
+                            <h3 class="experiences__company-project-name">Public service</h3>
+                            <ul class="experiences__company-project-responsibilities">
+                                <li>Sending requests, call ups, receiving documents from various government structures, as well as from the people themselves. Processing receiving information, making changes in the database informational system “State register of voters”</li>
+                                <li>Security administrator work: installation, reinstallation of operating systems from Windows XP to Windows 10; settings for network printers and routers; binding computers of department to domain group, watching to be installed the last version of antivirus and browser</li>
+                                <li>Management of department documents; registration of correspondence; participation in meetings, planning and forecasting of department expenses; negotiating with suppliers of goods and services; drafting and conclusion of contracts; preparation of an analysis of the work performed for the reporting period</li>
+                             </ul>
+                        </div>
+                    </div>
+                    <h3 class="experiences__header">Experience№2</h3>
+                    <div class="experiences__company">
+                        <div class="experiences__company-header">
+                            <span class="experiences__company-header-durability">november 2022 - present</span>
+                            <h3 class="experiences__company-header-name">Kharkiv polytechnic college</h3>
+                        </div>
+
+                        <div class="experiences__company-project">
+                            <span class="experiences__company-project-role">Accountant</span>
+                            <h3 class="experiences__company-project-name">Financial service</h3>
+                            <ul class="experiences__company-project-responsibilities">
+                                <li>Calculation of academic and social scholarships for students, taking into account indexation</li>
+                                <li>Recalculation for previous months, taking into account debts and new orders</li>
+                                <li>Creating financial and payment documents, work with bank and Treasury</li>
+                             </ul>
+                        </div>
+                    </div>
+                </div>
           
                 <div class="additional-info fv"></div>
               </div>
