--- a/index.html
+++ b/index.html
@@ -114,7 +114,23 @@
                     </div>
                 </div>
           
-                <div class="additional-info fv"></div>
+                <div class="additional-info fv">
+                    <div class="additional-info__education">
+                        <h3 class="additional-info__education-header">Education</h3>
+                        <div class="additional-info__education-university">
+                          <span class="additional-info__education-university-durability">january 2022-february 2022</span>
+                          <h3 class="additional-info__education-university-speciality">QA track</h3>
+                          <p class="additional-info__education-university-name">NIX Solutions,Kharkiv</p>
+                        </div>
+                    </div>
+                    
+                    <div class="additional-info__languages">
+                        <h3 class="additional-info__languages-header">Languages</h3>
+                        <p class="additional-info__languages-item">
+                          English: intermediate
+                        </p>
+                    </div>
+                </div>
               </div>
             </div>
           </div>
